src/test/ui/issues/issue-39559.stderr
error: generic parameters may not be used in const operations
  --> $DIR/issue-39559.rs:16:18
   |
LL |     entries: [T; D::dim()],
   |                  ^^^^^^ cannot perform const operation using `D`
   |
   = note: type parameters may not be used in const expressions

error: aborting due to previous error

